@@ -14,10 +14,14 @@ import org.springframework.stereotype.Component;
 public class ContinuousMeetingTimeStrategyImpl implements ContinuousMeetingTimeStrategy {
     @Override
     public List<BestMeetingTimeVo> find(List<TimeBlockDto> timeBlocks, Duration duration) {
+        List<BestMeetingTimeVo> response = new ArrayList<>();
+        if (timeBlocks.isEmpty()) {
+            return response;
+        }
+
         int startIdx = 0;
         int endIdx = 1;
 
-        List<BestMeetingTimeVo> response = new ArrayList<>();
         while (endIdx < timeBlocks.size()) {
             TimeBlockDto endTimeBlock = timeBlocks.get(endIdx - 1);
             TimeBlockDto nextTimeBlock = timeBlocks.get(endIdx);
@@ -49,7 +53,7 @@ public class ContinuousMeetingTimeStrategyImpl implements ContinuousMeetingTimeS
         }
         return response.stream()
                 .sorted((t1, t2) -> t2.weight() - t1.weight())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void validateAndAddMeetingTime(
